--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Pagina Backend (con react)"
+      content="Pagina Backend"
     />
 
     <link rel="stylesheet" 
